doc/org-manual.org (Installation): Use savannah https mirror; mention sr.ht mirror
* doc/org-manual.org (Using Org's git repository): Recommend http-only
GNU mirror for cloning.  The mirror is more stable and less prone to
DDOS.  Also, add Sourcehut mirror and the last resort.

Reported-by: jman <emacs-orgmode@city17.xyz>
Link: https://orgmode.org/list/87jyy1uelg.fsf@nyarlathotep

--- a/doc/org-manual.org
+++ b/doc/org-manual.org
@@ -140,7 +140,9 @@ You can clone Org's repository and install Org like this:
 
 #+begin_example
 $ cd ~/src/
-$ git clone https://git.savannah.gnu.org/git/emacs/org-mode.git
+$ git clone https://https.git.savannah.gnu.org/git/emacs/org-mode.git
+$ # alternatively, you can use mirror
+$ # git clone https://git.sr.ht/~bzg/org-mode
 $ cd org-mode/
 $ make autoloads
 #+end_example
