ob-core.el: Respect no/nil value in :wrap header argument
* lisp/ob-core.el (org-babel-insert-result): Do not wrap results if
the value of the :wrap header argument is "no" or "nil".
* doc/org-manual.org (Results of Evaluation): Update documentation.
* etc/ORG-NEWS (=:wrap= header argument can now be explicitly
disabled): Announce the new feature.

An empty :wrap header argument leads results to be wrapped in a
"results" special block.  It may sometimes be useful to turn off
wrapping explicitly for a particular block, e.g.  if the value of
:wrap is set programatically or in a file-level header.

Prompted by an issue with captioning results when using the by-backend
trick in
https://orgmode.org/worg/org-contrib/babel/languages/ob-doc-LaTeX.html.
Reported-by: Mathew Moore <matt@malomo.net>
Link: https://list.orgmode.org/CAAur0QTNjLMPp=2TwQrjLen3Tk6E1a6OzbaVExZVGA6yid5HFg@mail.gmail.com

--- a/doc/org-manual.org
+++ b/doc/org-manual.org
@@ -19331,10 +19331,10 @@ follows from the type specified above.
 
 #+cindex: @samp{wrap}, header argument
 The =wrap= header argument unconditionally marks the results block by
-appending strings to =#+BEGIN_= and =#+END_=.  If no string is
-specified, Org wraps the results in a =#+BEGIN_results=
-... =#+END_results= block.  It takes precedent over the =results=
-value listed above.  E.g.,
+appending strings to =#+BEGIN_= and =#+END_=, except if the value is
+=nil= or =no=.  If no string is specified, Org wraps the results in a
+=#+BEGIN_results= ... =#+END_results= block.  It takes precedent over
+the =results= value listed above.  E.g.,
 
 #+begin_example
 ,#+BEGIN_SRC emacs-lisp :results html :wrap EXPORT markdown
