Replace references to obsolete variables and functions
* doc/org-guide.org (Visibility Cycling):
* doc/org-manual.org (Global and local cycling, Internal archiving)
(Filtering in the agenda):
* lisp/ob-ref.el (org-babel-ref-index-list):
* lisp/ol.el (org-link-email-description-format):
* lisp/org-capture.el (org-capture-put-target-region-and-position):
* lisp/org-compat.el (org-show-block-all, org-flag-drawer)
(org-hide-block-toggle-maybe):
* lisp/org-mouse.el (org-mouse-popup-global-menu):
* lisp/org.el (org-properties-postprocess-alist, org-org-menu):
* lisp/ox-latex.el (org-latex-src-block-backend):
Replace references to obsolete functions and variables with their new alias.

--- a/doc/org-guide.org
+++ b/doc/org-guide.org
@@ -162,7 +162,7 @@ visibility in the buffer.
   : ,-> OVERVIEW -> CONTENTS -> SHOW ALL --.
   : '--------------------------------------'
 
-- {{{kbd(C-u C-u C-u TAB)}}} (~org-show-all~) ::
+- {{{kbd(C-u C-u C-u TAB)}}} (~org-fold-show-all~) ::
 
   Show all, including drawers.
 
